# toolformarc

./: product-brief.md
_bmad-output/implementation-artifacts/: sprint-status.yaml  story-1.1.md  story-1.2.md  story-1.4-implement-basic-call-routing-to-dialer.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
ivr-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
ivr-backend/alembic/: env.py
ivr-backend/alembic/versions/: 001_create_calls_table.py  002_add_routing_fields.py
ivr-backend/app/: __init__.py  main.py
ivr-backend/app/api/: health.py  webhooks.py
ivr-backend/app/core/: config.py
ivr-backend/app/db/: base.py  session.py
ivr-backend/app/models/: call.py
ivr-backend/app/repositories/: call_repository.py
ivr-backend/app/services/: routing_service.py
ivr-backend/tests/: __init__.py  conftest.py
ivr-backend/tests/test_api/: test_health.py  test_webhooks.py
ivr-backend/tests/test_integration/: test_webhook_routing_integration.py
ivr-backend/tests/test_repositories/: test_call_repository.py
ivr-backend/tests/test_services/: test_routing_service.py
ivr-dashboard/: .env.example  index.html  package-lock.json  package.json
ivr-dashboard/src/: App.tsx  vite-env.d.ts
ivr-dashboard/src/components/: ErrorBoundary.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  Navigation.tsx
(+7 files in other folders)
